Fix bug were ad was overlapping yelp link on spot page in mobile.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1167,7 +1167,7 @@ input[type='text']:focus {
 
     .details-right {
       display: block !important;
-      height: 100px !important;
+      height: auto !important;
       width: 100% !important;
       margin: -20px 0 0 0 !important;
     }
